--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,14 @@ jobs:
 
       - name: Run lint
         uses: reviewdog/action-golangci-lint@v2
+        with:
+          fail_on_error: true
 
       - name: Run gostyle
         uses: k1LoW/gostyle-action@fix-work-dir
         with:
           config-file: .gostyle.yml
+          fail-on-error: true
 
       - name: Run tests
         run: make ci
