--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Go
+        id: setup-go
         uses: actions/setup-go@v4
         with:
           go-version-file: go.mod
@@ -25,6 +26,8 @@ jobs:
         uses: reviewdog/action-golangci-lint@v2
         with:
           fail_on_error: true
+          go_version: '${{ steps.setup-go.outputs.go-version }}'
+          golangci_lint_flags: --timeout=5m
 
       - name: Run gostyle
         uses: k1LoW/gostyle-action@v1
